<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtNombrePLH"
        android:inputType="textCapSentences"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/txtApellidosPLH"
        android:inputType="textCapSentences"
        android:text="@string/txtApellidos"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:hint="@string/txtEdadPLH"
        android:inputType="textPersonName"
        android:text="@string/txtEdad"
        android:digits="0123456789"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rbgGenero"
        android:layout_width="189dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="208dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbHombre" />

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMujer" />
    </RadioGroup>

    <Switch
        android:id="@+id/swHijos"
        android:layout_width="139dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="368dp"
        android:text="@string/swHijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spEstadoCivil"
        android:layout_width="275dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="304dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnComprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="436dp"
        android:text="@string/btnComprobar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="436dp"
        android:text="@string/btnBorrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtComprobar"
        android:layout_width="344dp"
        android:layout_height="101dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="504dp"
        android:text="@string/txtComprobar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>